Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/typeAnnotations/failures/BadCast.out
BadCast.java:12:19: compiler.err.illegal.start.of.type
1 error
